[package]
name = "fixedstr-ext"
version = "0.5.8"
authors = ["Chuck Liang", "cupofc0t <cupofc0t@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A fork of fixedstr, which add more const functions to it."
repository = "https://github.com/c00t/fixedstr/"
keywords = ["string","no-std"]


[features]
default = []
serde=["dep:serde"]
std=[]
fstr = ["std"]
pub_tstr=[]
pub-tstr=["pub_tstr"]
shared-str=[]
flex-str=[]
circular-str=[]
experimental=[]
no-alloc=[]
compressed-str=[]
#prioritize-safety=[]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde={version="1", optional=true, default-features=false}
#static_assertions = "1.1.0"

[package.metadata.docs.rs]
features = ["serde","pub-tstr","circular-str","flex-str","shared-str","std"]
#all-features = true

#sp-io = "23.0.0"

#[profile.dev]
#panic = "abort"

#[profile.release]
#panic = "abort"
